; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_port.c_port_handle_node_down.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_port.c_port_handle_node_down.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.port = type { i32 }
%struct.sk_buff = type { i32 }

@TIPC_ERR_NO_NODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @port_handle_node_down to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @port_handle_node_down(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.port*, align 8
  %4 = alloca %struct.sk_buff*, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  %6 = call %struct.port* @tipc_port_lock(i64 %5)
  store %struct.port* %6, %struct.port** %3, align 8
  store %struct.sk_buff* null, %struct.sk_buff** %4, align 8
  %7 = load %struct.port*, %struct.port** %3, align 8
  %8 = icmp ne %struct.port* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %18

10:                                               ; preds = %1
  %11 = load %struct.port*, %struct.port** %3, align 8
  %12 = load i32, i32* @TIPC_ERR_NO_NODE, align 4
  %13 = call %struct.sk_buff* @port_build_self_abort_msg(%struct.port* %11, i32 %12)
  store %struct.sk_buff* %13, %struct.sk_buff** %4, align 8
  %14 = load %struct.port*, %struct.port** %3, align 8
  %15 = call i32 @tipc_port_unlock(%struct.port* %14)
  %16 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %17 = call i32 @tipc_net_route_msg(%struct.sk_buff* %16)
  br label %18

18:                                               ; preds = %10, %9
  ret void
}

declare dso_local %struct.port* @tipc_port_lock(i64) #1

declare dso_local %struct.sk_buff* @port_build_self_abort_msg(%struct.port*, i32) #1

declare dso_local i32 @tipc_port_unlock(%struct.port*) #1

declare dso_local i32 @tipc_net_route_msg(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
